--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -666,7 +666,7 @@ table.basic > tbody > tr > td.empty-label
 
 .form-basic-content ul li
 {
-  display: inline;
+  display: block;
   padding-top: 2px;
   padding-bottom: 2px;
 }
