Fixed the various font files to apply the font to text and menu controls

--- a/site/resources/styles/fonts/antic.css
+++ b/site/resources/styles/fonts/antic.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Antic";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Antic', Verdana, Arial, Helvetica, san-serif;
 }
