--- a/site/resources/styles/fonts/cousine.css
+++ b/site/resources/styles/fonts/cousine.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Cousine";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: "Cousine", "Courier New", Courier, mono
 }
