--- a/site/resources/styles/fonts/josefin-sans.css
+++ b/site/resources/styles/fonts/josefin-sans.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Josefin+Sans:400,700";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Josefin Sans', Verdana, Arial, Helvetica, san-serif;
 }
