--- a/site/resources/styles/fonts/jura.css
+++ b/site/resources/styles/fonts/jura.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Jura";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Jura', Verdana, Arial, Helvetica, san-serif;
 }
