--- a/site/resources/styles/fonts/maven-pro.css
+++ b/site/resources/styles/fonts/maven-pro.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Maven+Pro:400,700";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Maven Pro', Verdana, Arial, Helvetica, san-serif;
 }
