--- a/site/resources/styles/fonts/open-sans.css
+++ b/site/resources/styles/fonts/open-sans.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Open Sans', Verdana, Arial, Helvetica, san-serif;
 }
