--- a/site/resources/styles/fonts/quicksand.css
+++ b/site/resources/styles/fonts/quicksand.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Quicksand";
 
 body
+.text-control,
+.menu-control
 {
 	font-family: 'Quicksand', Verdana, Arial, Helvetica, san-serif;
 }
