--- a/site/resources/styles/fonts/raleway.css
+++ b/site/resources/styles/fonts/raleway.css
@@ -1,6 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Raleway:400,700";
 
-body
+body,
+.text-control,
+.menu-control
 {
 	font-family: 'Raleway', Verdana, Arial, Helvetica, san-serif;
 }
