Change menus to use click rather than hover (touch-screen compatibility) <http://earthli.com/projects/view_job.php?id=2155>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -737,7 +737,7 @@ table.basic > tbody > tr > td.empty-label
 
 .menu-trigger:hover .menu-dropdown
 {
-  display: block;
+  /*display: block;*/
 }
 
 ul.menu
