Fixed default font faces (san-serif => sans-serif)

--- a/site/resources/styles/fonts/antic.css
+++ b/site/resources/styles/fonts/antic.css
@@ -4,5 +4,5 @@ body
 .text-control,
 .menu-control
 {
-	font-family: 'Antic', Verdana, Arial, Helvetica, san-serif;
+	font-family: 'Antic', Verdana, Arial, Helvetica, sans-serif;
 }
