--- a/site/resources/styles/fonts/geneva.css
+++ b/site/resources/styles/fonts/geneva.css
@@ -2,5 +2,5 @@ body
 .text-control,
 .menu-control
 {
-	font-family: Geneva, Arial, Helvetica, san-serif
+	font-family: Geneva, Arial, Helvetica, sans-serif
 }
