--- a/site/resources/styles/fonts/raleway.css
+++ b/site/resources/styles/fonts/raleway.css
@@ -4,5 +4,5 @@ body,
 .text-control,
 .menu-control
 {
-	font-family: 'Raleway', Verdana, Arial, Helvetica, san-serif;
+	font-family: 'Raleway', Verdana, Arial, Helvetica, sans-serif;
 }
