--- a/site/resources/styles/fonts/trebuchet.css
+++ b/site/resources/styles/fonts/trebuchet.css
@@ -2,5 +2,5 @@ body
 .text-control,
 .menu-control
 {
-	font-family: "trebuchet ms", lucida, verdana, helvetica
+	font-family: "trebuchet ms", lucida, verdana, helvetica, sans-serif
 }
