--- a/site/resources/styles/fonts/imprima.css
+++ b/site/resources/styles/fonts/imprima.css
@@ -4,5 +4,5 @@ body
 .text-control,
 .menu-control
 {
-	font-family: 'Imprima', Verdana, Arial, Helvetica, san-serif;
+	font-family: 'Imprima', Verdana, Arial, Helvetica, sans-serif;
 }
