--- a/site/resources/styles/core/medium.css
+++ b/site/resources/styles/core/medium.css
@@ -48,7 +48,8 @@ th,
 .quoter,
 .menu,
 .nav-box,
-.button
+.button,
+pre
 {
   font-size: 12pt
 }
@@ -65,7 +66,6 @@ h5,
   font-size: 10pt
 }
 
-pre,
 .shell,
 .copyright,
 .versions,
