--- a/site/resources/themes/ice.css
+++ b/site/resources/themes/ice.css
@@ -194,7 +194,7 @@ h4
 pre > code
 {
   padding-left: 15px;
-  border-left: 3px rgb(160,160,160) solid;
+  border-color: silver;
 }
 
 .left-sidebar
