Security form buttons are missing their icons <http://earthli.com/projects/view_job.php?id=2154>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -729,6 +729,11 @@ table.basic > tbody > tr > td.empty-label
   min-height: 18px;
 }
 
+.no-label
+{
+  display: inline-block;
+}
+
 .sixteen.no-label
 {
   padding-left: 0;
