Some form fields have extra horizontal spacing <http://earthli.com/projects/view_job.php?id=2153>

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1617,6 +1617,17 @@ hr
   height: 100%;
 }
 
+.column-set
+{
+  display: table;
+}
+
+.column-set-column
+{
+  display: table-cell;
+  vertical-align: top;
+}
+
 .left-column
 {
   padding-right: 15px;
