--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -31,7 +31,7 @@ body
   margin: 0;
   padding: 0;
   background-color: white;
-  color: black;
+  color: #333;
 }
 
 table
@@ -57,7 +57,7 @@ table td
 table th
 {
   font-weight: bold;
-  border-bottom: 1px solid #CCC
+  border-bottom: 1px solid silver
 }
 
 table td p:first-child,
@@ -90,7 +90,7 @@ table.columns > tbody > tr > td,
 table.columns > tbody > tr > th
 {
   padding: 2px 15px;
-  border-right: 1px solid #CCC;
+  border-right: 1px solid silver;
 }
 
 table.basic > tbody > tr:first-child > td,
@@ -209,7 +209,7 @@ kbd
   font-family: monospace;
   background-color: #FAFAFA;
   border-radius: 4px;
-  border: 1px solid #CCCCCC;
+  border: 1px solid silver;
   border-bottom: medium none #FFFFFF;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.196), 0 0 0 1px #FFFFFF inset;
   color: #444444;
@@ -221,7 +221,7 @@ kbd
 .shell
 {
 	font-family: monospace;
-	background-color: black; 
+	background-color: #333;
 	border: 1px solid silver; 
 	color: white; 
 	padding: 0 2px;
@@ -239,7 +239,7 @@ pre > code
 {
   display: block;
   padding-left: 15px;
-  border-left: 6px #CCC solid;
+  border-left: 6px solid silver;
   margin: 15px 0 15px -6px;
 }
 
@@ -365,13 +365,13 @@ pre > code
   margin-top: 15px;
   margin-left: -15px;
   padding-left: 15px;
-  padding-bottom: 15px;
-  border-bottom: 1px solid #CCC;
+  padding-bottom: 5px;
+  border-bottom: 1px solid silver;
 }
 
 .top-box
 {
-  border-bottom: 1px solid #CCC;
+  border-bottom: 1px solid silver;
   margin-bottom: 15px;
   margin-right: -15px;
   margin-left: -15px;
@@ -412,7 +412,7 @@ pre > code
   clear: both;
   padding-left: 15px;
   margin-top: 15px;
-  border-top: 1px solid #CCC;
+  border-top: 1px solid silver;
   padding-top: 15px;
 }
 
@@ -468,7 +468,6 @@ pre > code
 
 		box
 		  box-title
-			box-body
 
 		Defines areas outside of the main content -- perhaps with additional information
 		or directing to other areas.
@@ -497,15 +496,7 @@ pre > code
   padding-right: 0;
 }
 
-.box-title
-{
-  font-weight: bold;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #000000;
-  margin: 0;
-}
-
-.side-bar 
+.side-bar
 {
   border: 1px solid #000000;
   border-spacing: 0
@@ -591,14 +582,14 @@ td.object-in-list + td.object-in-list
 .info-box-top
 {
   line-height: normal;
-  border-bottom: 1px solid #000000;
-  margin-bottom: 1em;
+  border-bottom: 1px solid silver;
+  margin-bottom: 15px;
 }
 
 .info-box-bottom
 {
-  border-top: 1px solid #000000;
-  margin-top: 1em;
+  border-top: 1px solid silver;
+  margin-top: 15px;
 }
 
 .info-box-bottom p:first-child,
@@ -780,7 +771,7 @@ ul.menu
   white-space: nowrap;
   text-align: left;
   background-color: #FFFFFF;
-  border: 1px solid black;
+  border: 1px solid silver;
 }
 
 ul.menu > li
@@ -792,7 +783,7 @@ ul.menu > li
 ul.menu .menu-group-title
 {
   padding: .6em .5em;
-  border-bottom: 1px dotted #CCC;
+  border-bottom: 1px dotted silver;
   cursor: default;
 }
 
@@ -819,7 +810,7 @@ ul.menu .menu-group-title
 .menu-item:hover
 {
   text-decoration: none;
-  border-color: #CCC;
+  border-color: silver;
   background-color: #EEE;
 }
 
@@ -837,7 +828,6 @@ ul.menu li:first-child .menu-item:hover
 {
   display: block;
   margin: 5px 0 0 0;
-  color: black;
   width: 200px;
   white-space: normal;
   line-height: 130%;
@@ -899,7 +889,7 @@ ul.menu li:first-child .menu-item:hover
 .description-box
 {
   width: 25%;
-  border-right: 1px solid #CCC; /* frame */
+  border-right: 1px solid silver; /* frame */
   padding-right: 15px;
 }
 
@@ -970,7 +960,7 @@ ul.menu li:first-child .menu-item:hover
 
 a.button:link, a.button:visited
 {
-  color: black;
+  color: #333;
   text-decoration: none;
 }
 
@@ -1000,6 +990,9 @@ a.button:link, a.button:visited
 .button.selected
 {
   cursor: default;
+  background-color: gray;
+  border-color: #666;
+  color: white;
 }
 
 .button img
@@ -1023,13 +1016,13 @@ a.button:link, a.button:visited
 
 .pager .disabled
 {
-  background: #EEEEEE;
+  background: #EEE;
   color: #AAAAAA;
 }
 
 .pager .selected
 {
-  background-color: #666666;
+  background-color: #666;
   color: white;
 }
 
@@ -1066,16 +1059,19 @@ a.button:link, a.button:visited
 .object-navigator .links
 {
   white-space: nowrap;
-  -webkit-column-width: 250px;
-  -webkit-column-gap: 15px;
-  -webkit-column-rule: 1px solid #CCC;
-  -moz-column-width: 250px;
-  -moz-column-gap: 15px;
-  -moz-column-rule: 1px solid #CCC;
-  column-width: 250px;
-  column-gap: 25px;
-  column-rule: 1px solid #CCC;
   margin: 15px 0;
+
+  column-width: 250px;
+  -webkit-column-width: 250px;
+  -moz-column-width: 250px;
+
+  column-rule: 1px solid silver;
+  -webkit-column-rule: 1px solid silver;
+  -moz-column-rule: 1px solid silver;
+
+  column-gap: 25px;
+  -webkit-column-gap: 15px;
+  -moz-column-gap: 15px;
 }
 
 .object-list li
@@ -1090,7 +1086,7 @@ a.button:link, a.button:visited
 
 .calendar 
 {
-  
+  border: none;
 }
 
 .calendar-banner, .calendar-footer 
@@ -1126,28 +1122,33 @@ a.button:link, a.button:visited
   text-align: center;
 }
 
-.cell-empty, .cell-non-empty, .cell-selected, .cell-highlight 
+.cell-empty,
+.cell-non-empty,
+.cell-selected,
+.cell-highlight
 {
   padding: 2px;
   vertical-align: top;
   empty-cells: show;
 }
 
-.cell-selected, .cell-highlight, .cell-non-empty 
+.cell-selected,
+.cell-highlight,
+.cell-non-empty
 {
-  border: 1px solid #000000;
+  border: 1px solid silver;
+}
+
+.cell-empty
+{
+  border: none;
 }
 
 /* @end */
 
 /* @group Statuses */
 
-.invisible 
-{
-  font-style: italic
-}
-
-.invisible:link, .invisible:visited, .invisible:active, .invisible:hover 
+.invisible
 {
   font-style: italic
 }
@@ -1161,11 +1162,6 @@ a.button:link, a.button:visited
 {
 }
 
-.locked
-{
-  color: #999999;
-}
-
 .caution, .warning, .error
 {
   padding: 5px;
@@ -1177,20 +1173,17 @@ a.button:link, a.button:visited
 {
   background-color: #FFEAEA;
   border-color: #A00000;
-  color: #A00000;
 }
 
 .warning 
 {
   background-color: #ebc76d;
-  color: #000000;
   border-color: #A06000;
 }
 
 .caution 
 {
   background-color: #FFFFCC;
-  color: #000000;
   border-color: #A0A000;
 }
 
@@ -1199,25 +1192,7 @@ span.error, span.caution, span.warning
   padding: 1px;
 }
 
-.caution a:link,
-.caution a:visited,
-.warning a:link,
-.warning a:visited,
-.error a:link,
-.error a:visited
-{
-  color: #0066FF;
-}
-
-.caution a:hover,
-.warning a:hover,
-.error a:hover
-{
-  background-color: transparent;
-  color: #CC0000;
-}
-
-.highlight 
+.highlight
 {
 }
 
@@ -1234,7 +1209,7 @@ span.error, span.caution, span.warning
 .quote-block 
 {
   padding-left: 15px;
-  border-left: 6px solid #CCCCCC;
+  border-left: 6px solid silver;
   margin-left: -6px;
 }
 
@@ -1286,11 +1261,16 @@ span.error, span.caution, span.warning
 
 .quote-inline
 {
+  font-style: italic;
 }
 
-.quoter 
+.quote-inline em
 {
-  margin-left: 3em;
+  font-style: normal;
+}
+
+.quoter
+{
   font-style: italic;
 }
 
@@ -1395,7 +1375,7 @@ blockquote p:first-child, .side-bar-body p:first-child, .chart-body p:first-chil
 
 .horizontal-separator 
 {
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid silver;
   empty-cells: show;
   height: 1px;
   clear: both;
@@ -1406,7 +1386,7 @@ hr
 {
 	color: transparent;
 	border: 0;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid silver;
   empty-cells: show;
   height: .1em;
   clear: both;
@@ -1455,7 +1435,7 @@ hr
 
 .frame 
 {
-  border: 1px solid #000000;
+  border: 1px solid silver;
 }
 
 .minimal-commands
@@ -1595,7 +1575,7 @@ hr
 {
   padding-left: 15px;
   margin-left: -15px;
-  border-right: 1px solid #CCC;
+  border-right: 1px solid silver;
   padding-right: 15px;
 }
 
@@ -1603,7 +1583,7 @@ hr
 {
   padding-right: 15px;
   margin-right: -15px;
-  border-left: 1px solid #CCC;
+  border-left: 1px solid silver;
   padding-left: 15px;
 }
 
