--- a/site/resources/styles/core/core_forms.css
+++ b/site/resources/styles/core/core_forms.css
@@ -32,8 +32,10 @@ select
   margin: 0;
 }
 
-.menu-control, .text-control
+.menu-control,
+.text-control
 {
+  border: 1px solid silver;
   border-radius: 4px;
   padding: 4px;
 }
