--- a/site/resources/themes/ice.css
+++ b/site/resources/themes/ice.css
@@ -1,6 +1,6 @@
 /****************************************************************************
 
-Copyright (c) 2002 Marco Von Ballmoos
+Copyright (c) 2002-2014 Marco Von Ballmoos
 
 This file is part of earthli WebCore.
 
@@ -24,96 +24,84 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-a:visited,
-a:link
+a:link,
+a:visited
 {
-	color: #3477B1;
+  color: #3477B1;
 }
 
 a:hover,
 a:active
 {
-	color: #CC3333;
+  color: #CC3333;
+}
+
+h2
+{
+  border-bottom: 1px dotted #AAAAAA;
+  color: #4A8CCA;
+}
+
+h3
+{
+  color: #333333;
+}
+
+h4
+{
+  color: #666;
 }
 
 .banner-title
 {
-	color: #0066CC;
+  color: #4A8CCA;
 }
 
-.footer
-{
-  border-top: 1px solid #4A8CCA;
-}
-
+.nav-box,
+.top-box,
+.footer,
+.chart,
+.preview,
+.form-basic-block,
+.left-sidebar,
+.right-sidebar,
 table.columns > tbody > tr > td,
-table.columns > tbody > tr > th
-{
-  border-color: #4A8CCA;
-}
-
-table th
-{
-  border-color: #4A8CCA;
-}
-
-th.basic
-{
-  border-color: #4A8CCA;
-}
-
-hr, .horizontal-separator, .vertical-separator
-{
-	border-color: #4A8CCA;
-}
-
-.cell-non-empty, .cell-selected, .cell-highlight
-{
-	border-color: #4A8CCA;
-}
-
-.cell-highlight
-{
-	background-color: #F4F4F4;
-}
-
-.cell-selected
-{
-	background-color: #DDEEFF;
-}
-
-.highlight
-{
-	color: #00AA00;
-  font-weight: normal;
-}
-
-ul.menu
-{
-	border: 1px solid #4A8CCA;
-}
-
-.menu-item
-{
-	border-top: 1px solid transparent;
-	border-bottom: 1px solid transparent;
-}
-
+table.columns > tbody > tr > th,
+table th,
+th.basic,
+hr,
+.horizontal-separator,
+.vertical-separator,
+.cell-non-empty,
+.cell-selected,
+.cell-highlight,
+ul.menu,
 .menu-item:hover
 {
   border-color: #4A8CCA;
 }
 
-.top-box
+.info-box-top,
+.info-box-bottom,
+.frame
 {
-  border-bottom: 1px solid #4A8CCA;
+  border-color: #AAA;
 }
 
-.nav-box
+
+.cell-highlight
 {
-  padding-bottom: 5px;
-  border-color: #4A8CCA;
-  font-weight: normal;
+  background-color: #F4F4F4;
+}
+
+.cell-selected
+{
+  background-color: #DDEEFF;
+}
+
+.highlight
+{
+  color: #00AA00;
 }
 
 .description-box
@@ -123,64 +111,20 @@ ul.menu
 
 .object-navigator .links
 {
-  -webkit-column-rule: 1px solid #4A8CCA;
-  column-rule: 1px solid #4A8CCA;
+  column-rule-color: #4A8CCA;
+  -webkit-column-rule-color: #4A8CCA;
+  -moz-column-rule-color: #4A8CCA;
 }
 
 .quote-inline
 {
-	font-style: italic;	
-	color: #777;
+  color: #777;
 }
 
-.quote-inline em
-{
-	font-style: normal;
-}
-
-.quote-block
-{
-	border-color: #CCCCCC;
-}
-
-.pullquote
-{
-}
-
-.chart, .preview, .form-basic-block
-{
-	border-color: #4A8CCA; /* frame */
-}
-
-.chart-title, .preview-title
+.chart-title,
+.preview-title
 {
   color: #0055BB;
-}
-
-h2
-{
-	border-bottom: 1px dotted #AAAAAA;
-	color: #0066CC;
-}
-
-h3
-{
-	color: #333333;
-}
-
-h4
-{
-  color: #666666;
-}
-
-.locked a:link, .locked a:visited
-{
-	color: #369;
-}
-
-.info-box-top, .info-box-bottom, .frame
-{
-	border-color: #AAA;
 }
 
 .info-box-top a:link,
@@ -193,34 +137,22 @@ h4
 
 pre > code
 {
-  padding-left: 15px;
   border-color: silver;
-}
-
-.left-sidebar
-{
-  border-color: #4A8CCA;
-}
-
-.right-sidebar
-{
-  border-color: #4A8CCA;
 }
 
 .button.selected
 {
   background-color: #4A8CCA;
-  border-color: #666;
   color: white;
 }
 
-.text-control, .menu-control
+.text-control,
+.menu-control
 {
-  border: 1px solid #999999;
+  border-color: #999;
 }
 
-.check-box-control
+.menu-item-description
 {
-  border: 1px solid #999999;
+  color: #333;
 }
-
